# chatBot

./: README.md  main.py  pyproject.toml  requirements.txt
data/chroma_data/: chroma.sqlite3
src/: generateS.py  saveConversation.py  streamapp.py
src/rag/: enbedding.py  new_chromadb.py
tests/: conftest.py  test_src.py
